2016-12-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/plots.py(scatter_density_plot_matrix): Added

	- Like a scatter plot matrix but with a
	hexbin+plot_distribution_as_percentiles in every off-diagonal.

2016-12-09  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read, Dataset._add_pseudo_fields):

	- Delegate addition of pseudo-fields to different method so that
	subclasses can implement specialised versions.

	* typhon/datasets/tovs.py(HIRS._add_pseudo_fields):

	- Implement specialisation considering that HIRS._read might return a
	tuple (head, lines), which messes up the pre-checks before passing the
	result from HIRS._read on to functions calculating pseudo fields.

2016-12-08  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

	* CHANGES: Put back header for new changes.

2016-12-08  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py, CHANGES: 0.3.5 Release.

2016-12-08  Oliver Lemke  <olemke@core-dump.info>

	* Changes: Renamed to CHANGES.

2016-12-07  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/geodesy:
	
	Added (geometric_limb_zenith_angle) and (line_ellipsoid_intersect) as
	helper functions to get ellipsoid limb zenith  angles when other 
	satellite parameters are known.  The first is used to get the 
	geometric limb viewing zenith angle by using the intersection between
	a line and the ellipsoid of the second function.

2016-12-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/spectroscopy.py:

	Module for spectroscopy related functions. Currently containing a function
	to calculte the width (full-width at half maximum) of an absorption line.

	* typhon/__init__.py: Import spectroscopy.

	* doc/modules.rstm doc/spectroscopy.rst:

	Added spectroscopy to documentation.

2016-12-07  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/geodesy:
	
	Added (geocentricposlos2cart).

2016-11-30  Lukas Kluft  <lukas.kluft@gmail.com>

	* Changes:
